examples/invalid/constrecursive.mcl

void f(const int x) {
    f(x - 1);
}

void main() {
    f(13);
}